# discord-help-bot

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: meta.rs  mod.rs  moderation.rs
