[package]
name = "discord-help-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
serenity = { version = "0.11", features = ["framework"] }
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"


